--- a/tutorials/explainer/lime_text_explainer.ipynb
+++ b/tutorials/explainer/lime_text_explainer.ipynb
@@ -24,18 +24,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/i330688/venv_xai/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "/Users/i330688/venv_xai/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Some auxiliary imports for the tutorial\n",
     "import sys\n",
@@ -43,7 +32,7 @@
     "import numpy as np\n",
     "from pprint import pprint\n",
     "from sklearn import datasets\n",
-    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
@@ -78,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['data', 'filenames', 'target_names', 'target', 'DESCR', 'description']\n",
+      "['data', 'filenames', 'target_names', 'target', 'DESCR']\n",
       "['rec.sport.baseball', 'sci.med', 'soc.religion.christian']\n",
       "[1 0 2 2 0 2 0 0 0 1]\n"
      ]
@@ -190,36 +179,36 @@
       "{0: {'confidence': 0.9604247937223921,\n",
       "     'explanation': [{'feature': 'Mattingly', 'score': 0.1630204569197586},\n",
       "                     {'feature': 'njit', 'score': -0.05400846560032084},\n",
-      "                     {'feature': 'Yankee', 'score': 0.0471284355327115},\n",
-      "                     {'feature': 'Lurie', 'score': 0.04592710278967292},\n",
-      "                     {'feature': 'PLAYERS', 'score': 0.04554150885242722},\n",
-      "                     {'feature': 'tesla', 'score': -0.045527833026026886},\n",
+      "                     {'feature': 'Yankee', 'score': 0.047128435532711524},\n",
+      "                     {'feature': 'Lurie', 'score': 0.0459271027896729},\n",
+      "                     {'feature': 'PLAYERS', 'score': 0.045541508852427214},\n",
+      "                     {'feature': 'tesla', 'score': -0.04552783302602691},\n",
       "                     {'feature': 'Allegheny', 'score': 0.0440014710417496},\n",
-      "                     {'feature': 'luriem', 'score': 0.04385267215867701},\n",
-      "                     {'feature': 'Liberalizer', 'score': 0.0424457658848723},\n",
+      "                     {'feature': 'luriem', 'score': 0.04385267215867704},\n",
+      "                     {'feature': 'Liberalizer', 'score': 0.042445765884872304},\n",
       "                     {'feature': 'Don', 'score': -0.030393475108189762}]},\n",
       " 1: {'confidence': 0.015984823571617023,\n",
-      "     'explanation': [{'feature': 'Mattingly', 'score': -0.05443408204951865},\n",
-      "                     {'feature': 'alleg', 'score': -0.02307128133739943},\n",
-      "                     {'feature': 'Yankee', 'score': -0.020479065643154905},\n",
-      "                     {'feature': 'Allegheny', 'score': -0.019319586624860215},\n",
-      "                     {'feature': 'game', 'score': -0.01907590934188312},\n",
-      "                     {'feature': 'Lurie', 'score': -0.018232342341704733},\n",
-      "                     {'feature': 'tesla', 'score': 0.016795268385738346},\n",
-      "                     {'feature': '1993Apr21', 'score': 0.012968253445169265},\n",
-      "                     {'feature': 'Don', 'score': 0.011628382538193859},\n",
+      "     'explanation': [{'feature': 'Mattingly', 'score': -0.05443408204951863},\n",
+      "                     {'feature': 'alleg', 'score': -0.023071281337399444},\n",
+      "                     {'feature': 'Yankee', 'score': -0.0204790656431549},\n",
+      "                     {'feature': 'Allegheny', 'score': -0.019319586624860205},\n",
+      "                     {'feature': 'game', 'score': -0.019075909341883114},\n",
+      "                     {'feature': 'Lurie', 'score': -0.01823234234170473},\n",
+      "                     {'feature': 'tesla', 'score': 0.016795268385738336},\n",
+      "                     {'feature': '1993Apr21', 'score': 0.012968253445169269},\n",
+      "                     {'feature': 'Don', 'score': 0.011628382538193854},\n",
       "                     {'feature': 'njit', 'score': 0.011514128262241137}]},\n",
       " 2: {'confidence': 0.02359038270598772,\n",
-      "     'explanation': [{'feature': 'Mattingly', 'score': -0.11653224143274477},\n",
-      "                     {'feature': 'njit', 'score': 0.03692400104773488},\n",
-      "                     {'feature': 'PLAYERS', 'score': -0.03482527334210057},\n",
-      "                     {'feature': 'Lurie', 'score': -0.0338882975136676},\n",
-      "                     {'feature': 'Yankee', 'score': -0.03316948335767298},\n",
-      "                     {'feature': 'luriem', 'score': -0.03247421017471953},\n",
-      "                     {'feature': 'Liberalizer', 'score': -0.030798805161043094},\n",
-      "                     {'feature': 'Jesus', 'score': 0.027367258249072785},\n",
-      "                     {'feature': 'tesla', 'score': 0.022433618170210355},\n",
-      "                     {'feature': 'christ', 'score': 0.021640392067396548}]}}\n"
+      "     'explanation': [{'feature': 'Mattingly', 'score': -0.11653224143274481},\n",
+      "                     {'feature': 'njit', 'score': 0.036924001047734877},\n",
+      "                     {'feature': 'PLAYERS', 'score': -0.034825273342100574},\n",
+      "                     {'feature': 'Lurie', 'score': -0.03388829751366763},\n",
+      "                     {'feature': 'Yankee', 'score': -0.033169483357673},\n",
+      "                     {'feature': 'luriem', 'score': -0.032474210174719534},\n",
+      "                     {'feature': 'Liberalizer', 'score': -0.03079880516104312},\n",
+      "                     {'feature': 'Jesus', 'score': 0.027367258249072796},\n",
+      "                     {'feature': 'tesla', 'score': 0.022433618170210407},\n",
+      "                     {'feature': 'christ', 'score': 0.02164039206739657}]}}\n"
      ]
     }
    ],
@@ -247,28 +236,36 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/i330688/venv_xai/lib/python3.6/re.py:212: FutureWarning: split() requires a non-empty pattern match.\n",
+      "  return _compile(pattern, flags).split(string, maxsplit)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Label sci.med\n",
       "{0: {'confidence': 0.006374625691451515,\n",
-      "     'explanation': [{'feature': 'pain', 'score': -0.02740261143993559},\n",
-      "                     {'feature': 'sr', 'score': 0.02617688083387586},\n",
-      "                     {'feature': 'ai', 'score': -0.02391983644002593},\n",
-      "                     {'feature': 'Covington', 'score': -0.020875042515066302},\n",
-      "                     {'feature': 'mcovingt', 'score': -0.020699977679627755}]},\n",
+      "     'explanation': [{'feature': 'pain', 'score': -0.027402611439935602},\n",
+      "                     {'feature': 'sr', 'score': 0.026176880833875864},\n",
+      "                     {'feature': 'ai', 'score': -0.023919836440025922},\n",
+      "                     {'feature': 'Covington', 'score': -0.02087504251506631},\n",
+      "                     {'feature': 'mcovingt', 'score': -0.02069997767962776}]},\n",
       " 1: {'confidence': 0.8824748491424798,\n",
-      "     'explanation': [{'feature': 'hp', 'score': 0.06962985800565993},\n",
-      "                     {'feature': 'doctor', 'score': 0.067793107925725},\n",
-      "                     {'feature': 'pain', 'score': 0.06680102769302987},\n",
-      "                     {'feature': 'kidney', 'score': 0.05490790579203543},\n",
-      "                     {'feature': 'Kidney', 'score': 0.05326854053175153}]},\n",
+      "     'explanation': [{'feature': 'hp', 'score': 0.06962985800565995},\n",
+      "                     {'feature': 'doctor', 'score': 0.06779310792572511},\n",
+      "                     {'feature': 'pain', 'score': 0.0668010276930299},\n",
+      "                     {'feature': 'kidney', 'score': 0.0549079057920354},\n",
+      "                     {'feature': 'Kidney', 'score': 0.05326854053175146}]},\n",
       " 2: {'confidence': 0.11115052516607107,\n",
-      "     'explanation': [{'feature': 'hp', 'score': -0.07999974792513226},\n",
-      "                     {'feature': 'doctor', 'score': -0.04754155417624491},\n",
-      "                     {'feature': 'pain', 'score': -0.04122731974890105},\n",
-      "                     {'feature': 'kidney', 'score': -0.0395055004527884},\n",
-      "                     {'feature': 'Kidney', 'score': -0.03753117417614438}]}}\n"
+      "     'explanation': [{'feature': 'hp', 'score': -0.0799997479251323},\n",
+      "                     {'feature': 'doctor', 'score': -0.04754155417624489},\n",
+      "                     {'feature': 'pain', 'score': -0.041227319748901106},\n",
+      "                     {'feature': 'kidney', 'score': -0.03950550045278837},\n",
+      "                     {'feature': 'Kidney', 'score': -0.03753117417614439}]}}\n"
      ]
     }
    ],
@@ -289,28 +286,36 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/i330688/venv_xai/lib/python3.6/re.py:212: FutureWarning: split() requires a non-empty pattern match.\n",
+      "  return _compile(pattern, flags).split(string, maxsplit)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Label soc.religion.christian\n",
       "{0: {'confidence': 6.798212345437472e-05,\n",
-      "     'explanation': [{'feature': 'Bible', 'score': -0.002350080976348548},\n",
-      "                     {'feature': 'Scripture', 'score': -0.001434457771521199},\n",
-      "                     {'feature': 'Heaven', 'score': -0.0013811963568868962},\n",
-      "                     {'feature': 'Sin', 'score': -0.00137237244087949},\n",
-      "                     {'feature': 'specific', 'score': -0.0013611914394935853}]},\n",
+      "     'explanation': [{'feature': 'Bible', 'score': -0.0023500809763485468},\n",
+      "                     {'feature': 'Scripture', 'score': -0.0014344577715211986},\n",
+      "                     {'feature': 'Heaven', 'score': -0.001381196356886895},\n",
+      "                     {'feature': 'Sin', 'score': -0.0013723724408794883},\n",
+      "                     {'feature': 'specific', 'score': -0.0013611914394935848}]},\n",
       " 1: {'confidence': 0.00044272540371258136,\n",
-      "     'explanation': [{'feature': 'Bible', 'score': -0.007407412195931128},\n",
-      "                     {'feature': 'Scripture', 'score': -0.00365836775767881},\n",
-      "                     {'feature': 'Heaven', 'score': -0.003652181996607399},\n",
-      "                     {'feature': 'immoral', 'score': -0.003469502264458388},\n",
-      "                     {'feature': 'Sin', 'score': -0.003246609821338069}]},\n",
+      "     'explanation': [{'feature': 'Bible', 'score': -0.007407412195931125},\n",
+      "                     {'feature': 'Scripture', 'score': -0.003658367757678809},\n",
+      "                     {'feature': 'Heaven', 'score': -0.003652181996607397},\n",
+      "                     {'feature': 'immoral', 'score': -0.003469502264458387},\n",
+      "                     {'feature': 'Sin', 'score': -0.003246609821338066}]},\n",
       " 2: {'confidence': 0.9994892924728337,\n",
-      "     'explanation': [{'feature': 'Bible', 'score': 0.00973653997148663},\n",
-      "                     {'feature': 'Scripture', 'score': 0.00512437563602413},\n",
-      "                     {'feature': 'Heaven', 'score': 0.005053514624616302},\n",
-      "                     {'feature': 'immoral', 'score': 0.004781252244149244},\n",
-      "                     {'feature': 'Sin', 'score': 0.004596128058053573}]}}\n"
+      "     'explanation': [{'feature': 'Bible', 'score': 0.009736539971486623},\n",
+      "                     {'feature': 'Scripture', 'score': 0.005124375636024145},\n",
+      "                     {'feature': 'Heaven', 'score': 0.005053514624616295},\n",
+      "                     {'feature': 'immoral', 'score': 0.004781252244149238},\n",
+      "                     {'feature': 'Sin', 'score': 0.004596128058053568}]}}\n"
      ]
     }
    ],
@@ -351,28 +356,36 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/i330688/venv_xai/lib/python3.6/re.py:212: FutureWarning: split() requires a non-empty pattern match.\n",
+      "  return _compile(pattern, flags).split(string, maxsplit)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Label soc.religion.christian\n",
       "{0: {'confidence': 6.798212345437472e-05,\n",
-      "     'explanation': [{'feature': 'Bible', 'score': -0.0022910360850923453},\n",
-      "                     {'feature': 'Heaven', 'score': -0.0013867279097790966},\n",
-      "                     {'feature': 'babies', 'score': -0.0013482141842248725},\n",
-      "                     {'feature': 'Scripture', 'score': -0.0012967367558917539},\n",
-      "                     {'feature': 'infants', 'score': -0.0012887203369136657}]},\n",
+      "     'explanation': [{'feature': 'Bible', 'score': -0.002291036085092343},\n",
+      "                     {'feature': 'Heaven', 'score': -0.001386727909779096},\n",
+      "                     {'feature': 'babies', 'score': -0.0013482141842248723},\n",
+      "                     {'feature': 'Scripture', 'score': -0.0012967367558917526},\n",
+      "                     {'feature': 'infants', 'score': -0.0012887203369136644}]},\n",
       " 1: {'confidence': 0.00044272540371258136,\n",
-      "     'explanation': [{'feature': 'Bible', 'score': -0.007441841401906928},\n",
-      "                     {'feature': 'Heaven', 'score': -0.003699731572404997},\n",
-      "                     {'feature': 'Scripture', 'score': -0.0034930324400726585},\n",
-      "                     {'feature': 'God', 'score': -0.0030701936621817757},\n",
-      "                     {'feature': 'doctrine', 'score': -0.0030262871362190537}]},\n",
+      "     'explanation': [{'feature': 'Bible', 'score': -0.007441841401906927},\n",
+      "                     {'feature': 'Heaven', 'score': -0.003699731572404996},\n",
+      "                     {'feature': 'Scripture', 'score': -0.003493032440072657},\n",
+      "                     {'feature': 'God', 'score': -0.0030701936621817727},\n",
+      "                     {'feature': 'doctrine', 'score': -0.003026287136219051}]},\n",
       " 2: {'confidence': 0.9994892924728337,\n",
-      "     'explanation': [{'feature': 'Bible', 'score': 0.009764693171821779},\n",
-      "                     {'feature': 'Heaven', 'score': 0.005105855347586751},\n",
-      "                     {'feature': 'Scripture', 'score': 0.004818017546359159},\n",
-      "                     {'feature': 'God', 'score': 0.004325649143393943},\n",
-      "                     {'feature': 'doctrine', 'score': 0.004244153519346245}]}}\n"
+      "     'explanation': [{'feature': 'Bible', 'score': 0.009764693171821786},\n",
+      "                     {'feature': 'Heaven', 'score': 0.0051058553475867505},\n",
+      "                     {'feature': 'Scripture', 'score': 0.00481801754635917},\n",
+      "                     {'feature': 'God', 'score': 0.004325649143393945},\n",
+      "                     {'feature': 'doctrine', 'score': 0.00424415351934624}]}}\n"
      ]
     }
    ],
