--- a/tutorials/explainer/lime_text_explainer.ipynb
+++ b/tutorials/explainer/lime_text_explainer.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# LIME Text Explainer via XAI\n",
     "\n",
-    "This tutorial demonstrates how to generate explanations using LIME's text explainer implemented by the XAI library. Mucb of the tutorial overlaps with what is covered in the [LIME tabular tutorial](lime_tabular_explainer.ipynb). To recap, the main steps for generating explanations are:\n",
+    "This tutorial demonstrates how to generate explanations using LIME's text explainer implemented by the XAI library. Much of the tutorial overlaps with what is covered in the [LIME tabular tutorial](lime_tabular_explainer.ipynb). To recap, the main steps for generating explanations are:\n",
     "\n",
     "1. Instantiate the Explainer class\n",
     "2. Build the text explainer\n",
