--- a/tutorials/explainer/shap_tabular_explainer.ipynb
+++ b/tutorials/explainer/shap_tabular_explainer.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SHAP Kernel Explainer for Tabular Data via XAI"
+    "# SHAP Kernel Explainer for Tabular Data via XAI\n",
+    "\n",
+    "This tutorial demonstrates how to generate explanations using SHAP's Kernel Explainer implemented by the XAI library. Much of the tutorial overlaps with what is covered in the [LIME tabular tutorial](lime_tabular_explainer.ipynb). To recap, the main steps for generating explanations are:\n",
+    "\n",
+    "1. Instantiate the Explainer class\n",
+    "2. Build the text explainer\n",
+    "3. Call `explain_instance`"
    ]
   },
   {
@@ -135,7 +141,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4: Build the explainer"
+    "### Step 4: Build the explainer\n",
+    "\n",
+    "Like with any explainer in XAI, the SHAP Kernel Explainer implements a `build_explainer` method to initialize the explainer (this can include pre-training a model or initializing some parameters). Note, however, that the `build_explainer` for SHAP requires a different set of parameters than that of the LIME Tabular Explainer. This also goes for `explain_instance`."
    ]
   },
   {
@@ -249,7 +257,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 6: Save and load the explainer"
+    "### Step 6: Save and load the explainer\n",
+    "\n",
+    "Any explanation algorithm in XAI can be saved/loaded via `save_explainer` and `load_explainer`, respectively."
    ]
   },
   {
