Added deep learning tutorial

--- a/tutorials/explainer/lime_text_explainer.ipynb
+++ b/tutorials/explainer/lime_text_explainer.ipynb
@@ -219,7 +219,7 @@
     "    num_features=10\n",
     ")\n",
     "\n",
-    "print('Label', raw_train.target_names[raw_test.target[0]])\n",
+    "print('Label', raw_train.target_names[raw_test.target[0]], raw_test.target[0])\n",
     "pprint(exp)"
    ]
   },
@@ -276,7 +276,7 @@
     "    num_features=5\n",
     ")\n",
     "\n",
-    "print('Label', raw_train.target_names[raw_test.target[7]])\n",
+    "print('Label', raw_train.target_names[raw_test.target[7]], raw_test.target[7])\n",
     "pprint(exp)"
    ]
   },
@@ -326,7 +326,7 @@
     "    num_features=5\n",
     ")\n",
     "\n",
-    "print('Label', raw_train.target_names[raw_test.target[9]])\n",
+    "print('Label', raw_train.target_names[raw_test.target[9]], raw_test.target[9])\n",
     "pprint(exp)"
    ]
   },
@@ -401,7 +401,7 @@
     "    num_features=5\n",
     ")\n",
     "\n",
-    "print('Label', raw_train.target_names[raw_test.target[9]])\n",
+    "print('Label', raw_train.target_names[raw_test.target[9]], raw_test.target[9])\n",
     "pprint(exp)"
    ]
   },
