rename sample to tutorials, also change the report build method name

--- a/tutorials/formatter/Sample Report Generation.ipynb
+++ b/tutorials/formatter/Sample Report Generation.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../')"
+    "sys.path.append('../../')"
    ]
   },
   {
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x1044454e0>\n"
+      "<xai.formatter.report.base.Report object at 0x10e117668>\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x1044454e0>\n"
+      "<xai.formatter.report.base.Report object at 0x10e117668>\n"
      ]
     }
    ],
@@ -213,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x1048f3da0>\n"
+      "<xai.formatter.report.base.Report object at 0x10e491320>\n"
      ]
     }
    ],
@@ -588,7 +588,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x1048f3da0>\n"
+      "<xai.formatter.report.base.Report object at 0x10e491320>\n"
      ]
     }
    ],
@@ -686,7 +686,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x1048f3da0>\n"
+      "<xai.formatter.report.base.Report object at 0x10e491320>\n"
      ]
     }
    ],
@@ -843,7 +843,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x1048f3da0>\n"
+      "<xai.formatter.report.base.Report object at 0x10e491320>\n"
      ]
     }
    ],
@@ -1223,7 +1223,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../xai/graphs/graph_generator.py:38: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "../../xai/graphs/graph_generator.py:38: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  ave_acc = np.sum(accuracy[condition]) / sample_num\n",
       "/Users/i062308/anaconda3/envs/xai-py37/lib/python3.7/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
       "  out=out, **kwargs)\n",
@@ -1235,7 +1235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x1048f3da0>\n"
+      "<xai.formatter.report.base.Report object at 0x10e491320>\n"
      ]
     }
    ],
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -1425,7 +1425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x1048f3da0>\n"
+      "<xai.formatter.report.base.Report object at 0x10e491320>\n"
      ]
     }
    ],
